# Langgraph

./: README.md  pyproject.toml
src/: 0-Langgrap_intro.ipynb  1-Simple_lmm_workflow.ipynb  2_qudratic_eqn_workflow.ipynb  3_prompt_chaining.ipynb  4_Batsman_workflow.ipynb  5_UPSC_essay.ipynb  6_review_reply_workflow.ipynb  7_X_post_generator.ipynb  8_basic_chat_bot.ipynb  9_persistenc.ipynb  main.py
